--- a/index.html
+++ b/index.html
@@ -114,48 +114,48 @@
             <div class="main__working working">
                <div class="working__body content__body">
                   <div class="working__conteiner conteiner">
-                     <div class="working__title">С кем
+                     <div class="working__title">С кем <br>
                         мы работаем</div>
                      <div class="working__block">
                         <div class="working__column">
                            <div class="working__card">
                               <div class="working__number-1">01</div>
-                              <div class="working__text">Промышленные
+                              <div class="working__text">Промышленные <br>
                                  предприятия</div>
                            </div>
                            <div class="working__card">
                               <div class="working__number-2">02</div>
-                              <div class="working__text">Производители
-                                 электрощитового
+                              <div class="working__text">Производители <br>
+                                 электрощитового <br>
                                  оборудования</div>
                            </div>
                            <div class="working__card">
                               <div class="working__number-1">03</div>
-                              <div class="working__text">Предприятия
+                              <div class="working__text">Предприятия <br>
                                  инфраструктуры</div>
                            </div>
                            <div class="working__card">
                               <div class="working__number-2">04</div>
-                              <div class="working__text">электромонтажные и строительные компании</div>
+                              <div class="working__text">электромонтажные и <br> строительные компании</div>
                            </div>
                            <div class="working__card">
                               <div class="working__number-1">05</div>
-                              <div class="working__text">Частные
+                              <div class="working__text">Частные <br>
                                  монтажники</div>
                            </div>
                            <div class="working__card">
                               <div class="working__number-2">06</div>
-                              <div class="working__text">Розничные магазины
+                              <div class="working__text">Розничные магазины <br>
                                  и сети DIY</div>
                            </div>
                            <div class="working__card">
                               <div class="working__number-2">07</div>
-                              <div class="working__text">Проектировщики
+                              <div class="working__text">Проектировщики <br>
                                  и дизайнеры</div>
                            </div>
                            <div class="working__card">
                               <div class="working__number-1">08</div>
-                              <div class="working__text">Частные
+                              <div class="working__text">Частные <br>
                                  лица</div>
                            </div>
                         </div>
