--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
                <div class="feedback__body content__body">
                   <div class="feedback__conteiner conteiner">
                      <div class="feedback__block">
-                        <div class="feedback__title">Связаться с нами</div>
+                        <div class="feedback__title">Связаться <br> с нами</div>
                         <div class="feedback__text">Мы предложим Вам комплексный подход к решению вопроса
                            технологического присоединения к сетям, благодаря этому Ваши затраты будут значительно ниже
                            затрат при самостоятельном исполнении</div>
