--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
                   <nav class="header__navigation">
                      <div class="header__row">
                         <li class="header__row-logo">
-                           <a class="header__logo">
-                              <img src="img/header-ico/header-ico.png" class="header__ico" alt="header-img">
-                              <div class="ico__title">СетьЭнергоСтрой</div>
+                           <a data-goto=".wrapper" href="#" class="header__logo nav">
+                              <img data-goto=".wrapper" src="img/header-ico/header-ico.png" class="header__ico nav" alt="header-img">
+                              <div data-goto=".wrapper" class="ico__title nav">СетьЭнергоСтрой</div>
                            </a>
                         </li>
                         <div class="menu__burger">
@@ -83,7 +83,8 @@
                            <div class="cooperation__text">Работаем напрямую с изготовителями без посредников, поэтому
                               готовы предоставить индивидуальные условия каждому клиенту
                            </div>
-                           <a data-goto=".feedback__title" href="#" class="cooperation__button nav">Обсудить сотрудничество</a>
+                           <a data-goto=".feedback__title" href="#" class="cooperation__button nav">Обсудить
+                              сотрудничество</a>
                         </div>
                      </div>
                   </div>
@@ -259,7 +260,8 @@
                            <div class="contacts__img"><img src="img/main-ico/map-pin.svg" alt="map-pin.svg"></div>
                            <div class="info__block-text">
                               <div class="info__title">Адрес</div>
-                              <a href="https://www.google.com/maps/search/140080,+%D0%9C%D0%BE%D1%81%D0%BA%D0%BE%D0%B2%D1%81%D0%BA%D0%B0%D1%8F+%D0%BE%D0%B1%D0%BB,+%D0%9F%D1%80%D0%BE%D0%BC%D0%B7%D0%BE%D0%BD%D0%B0+%D0%A2%D1%83%D1%80%D0%B0%D0%B5%D0%B2%D0%BE+%D1%82%D0%B5%D1%80,+%D1%81%D1%82%D1%80%D0%BE%D0%B5%D0%BD%D0%B8%D0%B5+16,+%D0%BE%D1%84%D0%B8%D1%81++++++++++++++++++++++++++++++++++309/@55.5616227,37.9403014,17z/data=!3m1!4b1?hl=ru-RU" class="info__text">140080, Московская обл, Промзона Тураево тер, строение 16, офис
+                              <a href="https://www.google.com/maps/search/140080,+%D0%9C%D0%BE%D1%81%D0%BA%D0%BE%D0%B2%D1%81%D0%BA%D0%B0%D1%8F+%D0%BE%D0%B1%D0%BB,+%D0%9F%D1%80%D0%BE%D0%BC%D0%B7%D0%BE%D0%BD%D0%B0+%D0%A2%D1%83%D1%80%D0%B0%D0%B5%D0%B2%D0%BE+%D1%82%D0%B5%D1%80,+%D1%81%D1%82%D1%80%D0%BE%D0%B5%D0%BD%D0%B8%D0%B5+16,+%D0%BE%D1%84%D0%B8%D1%81++++++++++++++++++++++++++++++++++309/@55.5616227,37.9403014,17z/data=!3m1!4b1?hl=ru-RU"
+                                 class="info__text">140080, Московская обл, Промзона Тураево тер, строение 16, офис
                                  309</a>
                            </div>
                         </div>
@@ -306,16 +308,16 @@
                      <nav class="footer__nav nav">
                         <ul class="footer__menu-list">
                            <li class="footer__menu">
-                              <a href="#" class="footer__menu-link">О нас</a>
+                              <a data-goto=".aboutcompany__title" href="#" class="footer__menu-link nav">О нас</a>
                            </li>
                            <li class="footer__menu">
-                              <a href="#" class="footer__menu-link">С кем работаем</a>
+                              <a data-goto=".working__title" href="#" class="footer__menu-link nav">С кем работаем</a>
                            </li>
                            <li class="footer__menu">
-                              <a href="#" class="footer__menu-link">Преимущества</a>
+                              <a data-goto=".benefits__title" href="#" class="footer__menu-link nav">Преимущества</a>
                            </li>
                            <li class="footer__menu">
-                              <a href="#" class="footer__menu-link">Услуги</a>
+                              <a data-goto=".design__title" href="#" class="footer__menu-link nav">Услуги</a>
                            </li>
                         </ul>
                         <li class="footer__policy">
